--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
+  "name": "auth-server",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "start": "bun run src/server.ts",
+    "dev": "bun run --hot src/server.ts"
   },
   "dependencies": {
-    "hono": "^3.12.6"
+    "cron": "^3.1.6",
+    "drizzle-orm": "^0.29.3",
+    "hono": "^3.12.5",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.5",
+    "valibot": "^0.25.0"
   },
   "devDependencies": {
-    "@types/bun": "^1.0.0"
+    "@tsconfig/recommended": "^1.0.3",
+    "@types/jsonwebtoken": "^9.0.5",
+    "bun-types": "^1.0.0",
+    "drizzle-kit": "^0.20.10"
+  },
+  "peerDependencies": {
+    "typescript": "^5.3.0"
   }
 }
