--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "drizzle-orm": "^0.29.3",
     "hono": "^3.12.5",
     "http-status-codes": "^2.3.0",
+    "js-toml": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mysql2": "^3.6.5",
     "valibot": "^0.25.0"
   },
